# QFTCert

./: .gitignore  LICENSE  README.md  pyproject.toml
claims/: kutasov_Nc3_Nf5_k2.json  kutasov_wrong_magnetic_rank_k2.json  missing_meson.json  sqcd_Nc3_Nf5.json  wrong_magnetic_rank.json  wrong_meson_R_charge.json  wrong_superpotential_charge.json
docs/: phase2b_dp0_magnetic.md
dualitycert/: __init__.py  cli.py
dualitycert/core/: __init__.py  certificates.py  objects.py  obligations.py  registry.py  status.py  theory_kind.py
dualitycert/examples/: __init__.py  seiberg_sqcd.py
dualitycert/groups/: __init__.py  su.py  u1.py
dualitycert/qft/: __init__.py  anomalies.py  checks.py  chiral_ring.py  claims.py  critic.py  deformations.py  dualities.py  kutasov.py  operators.py  pure_quiver_builder.py  quiver_chiral_ring.py  rcharges.py  scaffolds.py  susy.py  symmetries.py
tests/: test_certificates.py  test_claims_cli.py  test_critic.py  test_dp0_adversarial.py  test_dp0_duality.py  test_dp0_magnetic_physics.py  test_dp0_physics.py  test_extended_checks.py  test_kutasov.py  test_operator_maps.py  test_pure_quiver_anomalies.py  test_pure_quiver_builder.py  test_quiver_chiral_ring.py  test_round_trip.py  test_sqcd.py  test_su_anomalies.py  test_theory_kind.py
